test/Fail/UselessOverlap.agda

module _ where

record R : Set₁ where
  field
    overlap A :  Set
