test/Fail/UselessOverlap.err
UselessOverlap.agda:6.5: error: [ParseError]
The 'overlap' keyword only applies to instance fields (fields marked with {{ }})
